Fix tags overflowing in attachment annotation preview
Fixes https://forums.zotero.org/discussion/comment/477579/#Comment_477579

--- a/scss/elements/_annotationRow.scss
+++ b/scss/elements/_annotationRow.scss
@@ -61,5 +61,6 @@ annotation-row {
 	.tags {
 		border-top: 1px solid var(--fill-quinary);
 		padding: 3px 8px;
+		word-break: break-word;
 	}
 }
